[package]
name = "injector"
version = "0.1.0"
authors = ["MordragT <scrat_games@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.15.3"
regex = "1.4.2"

[target.'cfg(target_os = "linux")'.dependencies]
dynasm = "1.0.0"
dynasmrt = "1.0.0"
procfs = "0.9.1"
goblin = "0.3.0"
nix = "0.19.1"